# Document-Intelligence-Enhanced-

./: .dockerignore  Dockerfile  README.md  db.py  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  test.py  testminio.py  ui_wireframe_simple.jsx
agents/: analysis_agent.py  memory_agent.py  orchestrator_agent.py  retrieval_agent.py  tools.py
core/: settings.py  telemetry.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/api/: api.js
frontend/src/components/: Sidebar.jsx  StatCard.jsx
models/: __init__.py  chunk_embedding.py  document.py  document_chunk.py  document_summary.py  insights.py  messages.py  query.py  query_session.py  session_summary.py  upload_session.py  user.py
routers/: chunk_embedding.py  comparison.py  document.py  document_chunk.py  document_summary.py  insights.py  messages.py  query.py  query_session.py  session_summary.py  upload_session.py  user.py
schemas/: chunk_embedding.py  comparison.py  document.py  document_chunk.py  document_summary.py  insights.py  messages.py  query.py  query_session.py  session_summary.py  upload_session.py  user.py
services/: PDFExtractionService.py  chunk_embedding_service.py  chunking_service.py  comparison_service.py  document_chunk_service.py  document_summary_service.py  embedding_service.py  ingestion_service.py  llm_service.py  minio_service.py  query_service.py  rabbitmq_service.py  retrieval_service.py  upload_document_service.py
workers/: chunking_worker.py  embedding_worker.py  extraction_worker.py  summary_worker.py
(+1 files in other folders)
