[project]
name = "document-intelligence"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.6.12",
    "fastapi[standard]>=0.136.3",
    "minio>=7.2.20",
    "openai>=2.41.0",
    "openinference-instrumentation-agno>=0.1.37",
    "openinference-instrumentation-openai>=0.1.52",
    "openinference-semantic-conventions>=0.1.30",
    "opentelemetry-api>=1.42.1",
    "opentelemetry-exporter-otlp>=1.42.1",
    "opentelemetry-exporter-otlp-proto-http>=1.42.1",
    "opentelemetry-instrumentation-fastapi>=0.63b1",
    "opentelemetry-instrumentation-sqlalchemy>=0.63b1",
    "opentelemetry-sdk>=1.42.1",
    "pgvector>=0.4.2",
    "pika>=1.4.1",
    "psycopg[binary]>=3.3.4",
    "pwdlib[argon2]>=0.3.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pymupdf4llm>=1.27.2.3",
    "sqlalchemy>=2.0.50",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.49.0",
]

